bynkc/tests/fixtures/positive/44_is_with_if/input.karn
commons test {
  fn useValue(r: Result[Int, String]) -> Int {
    if r is Ok(n) {
      n
    } else {
      0
    }
  }
}
