bynkc/tests/fixtures/negative/26_invalid_generic_arg_count/input.karn
commons test {
  fn f(n: Int) -> Result[Int] {
    Ok(n)
  }
}
